...
    );
  }

  // build compose message
  Widget _buildComposeMsg() {
    return Container(
      key: const ValueKey('compose'),
      padding: const EdgeInsets.only(left: 5.0, bottom: 4.0, right: 4.0),
      decoration: BoxDecoration(color: Theme.of(context).canvasColor),
      child: Row(
        children: [
          Flexible(
              child: TextField(
...
            keyboardType: TextInputType.multiline,
            decoration:
                const InputDecoration.collapsed(hintText: 'Send a message'),
            onSubmitted: _onTextMsgSubmitted,
          )),
          IconButton(
              key: const ValueKey('sendMsg'),
              icon: const Icon(Icons.send),
              onPressed: () => _onTextMsgSubmitted(_textEditingController.text))
        ],
      ),
    );
  }
...
