...
        });
  }

  // build phone number text field
  Widget _buildUserNameFormField() {
    return TextFormField(
        key: const ValueKey('UsernameFormField'),
        initialValue: 'omer gamliel',
        decoration: InputDecoration(
            hintText: 'Enter username',
            prefixIcon: const Icon(Icons.person),
            border: OutlineInputBorder(
                borderRadius: BorderRadius.circular(8.0),
...
        });
  }

  // build continue button
  Widget _buildContinueButton() {
    return RaisedButton(
      key: const ValueKey('CONTINUE'),
      onPressed: _submitForm,
      shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(5.0)),
      padding: const EdgeInsets.all(0.0),
      child: Ink(
        decoration: const BoxDecoration(
          gradient: LinearGradient(
...
