...
  // returns AppBar FAB widget
  Widget _buildAppBarFAB(MainViewModel model) {
    return AnimatedOpacity(
      duration: const Duration(milliseconds: 300),
      opacity: _fabVisible ? 1.0 : 0.0,
      child: FloatingActionButton(
        key: const ValueKey('FAB'),
        onPressed: () => model.handlePressedFAB(_pageIndex, showStatusModal),
        child: Icon(
          _fabIconData,
          color: Colors.white,
        ),
      ),
...
